[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/botao_configuracao.png" type="Texture" id=1]
[ext_resource path="res://assets/images/botao_voltar.png" type="Texture" id=2]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=3]
[ext_resource path="res://Spript/Topo.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Configuracao.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Topo" type="Panel" groups=[
"TelaNivel",
]]
margin_left = 1.0
margin_right = 721.0
margin_bottom = 99.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configuracao" type="TextureButton" parent="."]
margin_left = 617.199
margin_top = 2.37842
margin_right = 717.199
margin_bottom = 102.378
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voltar" type="TextureButton" parent="."]
margin_left = -3.05176e-05
margin_top = 3.56761
margin_right = 100.0
margin_bottom = 103.568
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupConfiguracao" parent="." instance=ExtResource( 5 )]

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 3 )
is_real = true
banner_id = "ca-app-pub-1556568734938950/6831743912"
interstitial_id = "ca-app-pub-1556568734938950/5412696949"
[connection signal="pressed" from="Configuracao" to="." method="_on_Configuracao_pressed"]
[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
